Fix up confirmation modal

--- a/src/app/design/molecules/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/design/molecules/confirmation-modal/confirmation-modal.component.html
@@ -30,5 +30,5 @@
 </ng-template>
 
 <div (click)="open(content)">
-  <ng-content></ng-content>
+  <ng-content select="[opener]"></ng-content>
 </div>
