Disable footer delete without permission

--- a/src/app/design/templates/map/map.component.html
+++ b/src/app/design/templates/map/map.component.html
@@ -45,6 +45,7 @@
 
     <!-- Footer (Move to other Article + Delete Article) -->
     <app-article-footer
+      [showDelete]="canDelete"
       [buttonLink]="homeUrl"
       [buttonLabel]="'Back to Frontpage'"
       [deleteMessage]="'Delete Map of ' + map.name + '?'"
