--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,11 +30,6 @@ body{
 }
 
 h1, h2, h3, h4, h5, h6 {
-	color: #ffffff;
-	font-weight: bold!important;
-	line-height: 1.5;
-	margin: 0 0 1rem 0;
-	text-transform: uppercase;
 	letter-spacing: 0.05rem;
 }
 
@@ -43,11 +38,19 @@ h1{
 	letter-spacing: 0.5rem!important;
 	font-size: 2.25rem!important;
 	line-height: 1.3!important;
+	text-transform: uppercase;
+	font-weight: bold!important;
 }
 
 h2{
 	letter-spacing: 0.2rem!important;
 	font-size: 1.5rem!important;
+	text-transform: uppercase;
+	font-weight: bold!important;
+}
+
+h3, h4{
+	font-weight: bold;
 }
 
 blockquote{
