--- a/src/app/design/organisms/quote-field/quote-field.component.html
+++ b/src/app/design/organisms/quote-field/quote-field.component.html
@@ -39,7 +39,7 @@
   <app-card class="form-card">
       <!-- Heading -->
       <h5 class="form-card__heading">
-        Updating Quote {{ quote.pk }}
+        Updating Quote {{ quote?.pk }}
       </h5>
   
       <ng-container *ngIf="canUpdate && state === 'UPDATE'">
@@ -98,17 +98,17 @@
     <blockquote class="form-card__quote quote">
       <app-html-text 
         class="quote__content"
-        [text]="quote.quote"
+        [text]="quote?.quote ?? ''"
       ></app-html-text>
       
       <div class="quote__description">
-        <ng-container *ngIf="quote.description">
+        <ng-container *ngIf="quote?.description">
           <app-html-text
-            [text]="'- ' + quote.description"
+            [text]="'- ' + quote?.description"
           ></app-html-text>
         </ng-container>
 
-        <ng-container *ngIf="!quote.description">
+        <ng-container *ngIf="!quote?.description">
           - {{ character.name }}
         </ng-container>
       </div>
@@ -132,6 +132,3 @@
     </div>
   </app-card>
 </ng-template>
-
-<!-- Loading Spinner -->
-<ng-template #loading><app-spinner></app-spinner></ng-template>
