--- a/src/app/design/organisms/quote/quote.component.html
+++ b/src/app/design/organisms/quote/quote.component.html
@@ -1,110 +1,112 @@
-<ng-container *ngIf="quote && !isLoadingQuote; else loading">
-  <div class="field">
-    <blockquote class="field__content quote">
-      <!-- Quote -->
-      <app-html-text class="quote__text" [text]="quote.quote"></app-html-text>
-
-      <!-- Quote Description -->
-      <div class="quote__description">
-        <ng-container *ngIf="quote.description">
-          <app-html-text
-            [text]="'- ' + quote.description"
-          ></app-html-text>
+<ng-container *ngIf="quote">
+  <ng-container *ngIf="!isLoadingQuote; else loading">
+    <div class="field">
+      <blockquote class="field__content quote">
+        <!-- Quote -->
+        <app-html-text class="quote__text" [text]="quote.quote"></app-html-text>
+  
+        <!-- Quote Description -->
+        <div class="quote__description">
+          <ng-container *ngIf="quote.description">
+            <app-html-text
+              [text]="'- ' + quote.description"
+            ></app-html-text>
+          </ng-container>
+  
+          <ng-container *ngIf="!quote.description">
+            - {{ character.name }}
+          </ng-container>
+        </div>
+  
+        <app-separator></app-separator>
+  
+        <!-- Quote Connections -->
+        <div class="quote__connections d-inline icon-container">
+          <app-badge-list
+            [entries]="badgeEntries"
+            [label]="'Characters'"
+            [createOptions]="{
+              options: campaignCharacters,
+              labelProp: 'name',
+              valueProp: 'pk'
+            }"
+            [canCreate]="canCreate"
+            [canDelete]="canDelete"
+            [cancelButtonType]="'DARK'"
+            (entryCreate)="onConnectionCreate($event)"
+            (entryDelete)="onConnectionDelete($event)"
+          ></app-badge-list>
+        </div>
+      </blockquote>
+  
+      <!-- Quote Refresh/Create/Edit/Delete Icons -->
+      <div class="field__controls">
+        <!-- Load Next Quote -->
+        <app-button 
+          class="field__control"
+          title="Load new quote"
+          [type]="'INFO'"
+          [icon]="'refresh'"
+          (click)="getNextRandomQuote()"
+        ></app-button>
+        
+        <!-- Edit Quote -->
+        <ng-container *ngIf="canUpdate">
+          <app-button
+            class="field__control"
+            title="Edit Quote"
+            [type]="'SECONDARY'"
+            [icon]="'pencil'"
+            (click)="quoteUpdate.emit(quote)"
+          ></app-button>
         </ng-container>
-
-        <ng-container *ngIf="!quote.description">
-          - {{ character.name }}
+  
+        <!-- Create Quote -->
+        <ng-container *ngIf="canCreate">
+          <app-button
+            class="field__control"
+            title="Create Quote"
+            [type]="'PRIMARY'"
+            [icon]="'plus'"
+            (click)="quoteCreate.emit()"
+          ></app-button>
         </ng-container>
+  
+        <!-- Delete Quote -->
+        <ng-container *ngIf="canDelete">
+          <app-button
+            class="field__control"
+            title="Delete Quote"
+            [type]="'DANGER'"
+            [icon]="'trash'"
+            (click)="quoteDelete.emit(quote)"
+          ></app-button>
+        </ng-container>
+  
+        <!-- Copy to Clipboard -->
+        <app-button
+          class="field__control"
+          title="Copy Quote to Clipboard"
+          [type]="'DARK'"
+          [icon]="'copy'"
+          (click)="copyQuoteToClipboard()"
+        ></app-button>
+        
+        <!-- Hyperlink to Quote Overview -->
+        <a [routerLink]="quoteOverviewUrl">
+          <app-button
+            class="field__control"
+            title="See all quotes"
+            [type]="'SECONDARY'"
+            [icon]="'th-list'"
+          ></app-button>
+        </a>
+  
       </div>
-
-      <app-separator></app-separator>
-
-      <!-- Quote Connections -->
-      <div class="quote__connections d-inline icon-container">
-        <app-badge-list
-          [entries]="badgeEntries"
-          [label]="'Characters'"
-          [createOptions]="{
-            options: campaignCharacters,
-            labelProp: 'name',
-            valueProp: 'pk'
-          }"
-          [canCreate]="canCreate"
-          [canDelete]="canDelete"
-          [cancelButtonType]="'DARK'"
-          (entryCreate)="onConnectionCreate($event)"
-          (entryDelete)="onConnectionDelete($event)"
-        ></app-badge-list>
-      </div>
-    </blockquote>
-
-    <!-- Quote Refresh/Create/Edit/Delete Icons -->
-    <div class="field__controls">
-      <!-- Load Next Quote -->
-      <app-button 
-        class="field__control"
-        title="Load new quote"
-        [type]="'INFO'"
-        [icon]="'refresh'"
-        (click)="getNextRandomQuote()"
-      ></app-button>
-      
-      <!-- Edit Quote -->
-      <ng-container *ngIf="canUpdate">
-        <app-button
-          class="field__control"
-          title="Edit Quote"
-          [type]="'SECONDARY'"
-          [icon]="'pencil'"
-          (click)="quoteUpdate.emit(quote)"
-        ></app-button>
-      </ng-container>
-
-      <!-- Create Quote -->
-      <ng-container *ngIf="canCreate">
-        <app-button
-          class="field__control"
-          title="Create Quote"
-          [type]="'PRIMARY'"
-          [icon]="'plus'"
-          (click)="quoteCreate.emit()"
-        ></app-button>
-      </ng-container>
-
-      <!-- Delete Quote -->
-      <ng-container *ngIf="canDelete">
-        <app-button
-          class="field__control"
-          title="Delete Quote"
-          [type]="'DANGER'"
-          [icon]="'trash'"
-          (click)="quoteDelete.emit(quote)"
-        ></app-button>
-      </ng-container>
-
-      <!-- Copy to Clipboard -->
-      <app-button
-        class="field__control"
-        title="Copy Quote to Clipboard"
-        [type]="'DARK'"
-        [icon]="'copy'"
-        (click)="copyQuoteToClipboard()"
-      ></app-button>
-      
-      <!-- Hyperlink to Quote Overview -->
-      <a [routerLink]="quoteOverviewUrl">
-        <app-button
-          class="field__control"
-          title="See all quotes"
-          [type]="'SECONDARY'"
-          [icon]="'th-list'"
-        ></app-button>
-      </a>
-
     </div>
-  </div>
+  </ng-container>
 </ng-container>
 
-
-<!-- Loading Spinner -->
-<ng-template #loading><app-spinner></app-spinner></ng-template>
+<ng-template #loading>
+  <app-spinner></app-spinner>
+</ng-template>
