--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,10 @@
 @import './custom_bootstrap.scss';
 @import 'bootstrap/scss/bootstrap'; //Must be imported after custom_bootstrap so that values from custom_bootstrap are available for overriding
 @import './variables.scss';
+@import './fonts.scss';
 
 html{
-	font-size: 16px;
+	font-size: 18px;
 }
 
 body{
@@ -29,7 +30,7 @@ body{
 	}
 }
 
-h1, h2, h3, h4, h5, h6 {
+h3, h4, h5, h6, p {
 	letter-spacing: 0.05rem;
 }
 
