--- a/src/app/design/molecules/confirmation-toggle-button/confirmation-toggle-button.component.html
+++ b/src/app/design/molecules/confirmation-toggle-button/confirmation-toggle-button.component.html
@@ -4,6 +4,7 @@
 
 <ng-template #inactiveToggle>
   <app-button 
+    class="confirmation-toggle"
     (click)="toggle()" 
     [type]="toggleType"
     [icon]="icon"
