--- a/src/app/design/organisms/location-accordion/location-accordion.component.html
+++ b/src/app/design/organisms/location-accordion/location-accordion.component.html
@@ -4,7 +4,7 @@
   <ng-container *ngIf="canCreate">
     <a [routerLink]="createUrl">
       <app-button 
-        class="ms-2" 
+        class="create-button" 
         [type]="'PRIMARY'" 
         [size]="'SMALL'"
         [icon]="'plus'"
