--- a/src/app/design/molecules/confirmation-modal/confirmation-modal.component.scss
+++ b/src/app/design/molecules/confirmation-modal/confirmation-modal.component.scss
@@ -28,3 +28,16 @@
     border-color: var(--bs-warning);
   }
 }
+
+.body{
+  &__buttons{
+    margin-top: var(--spacer-3);
+    margin-bottom: var(--spacer-1);
+  }
+  
+  &__button{
+    margin-right: var(--spacer-3);
+    width: fit-content;
+    display: inline-block;
+  }
+}
