--- a/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.html
+++ b/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.html
@@ -56,7 +56,7 @@
                 [icon]="'plus'"
                 [text]="'Add Encounter'"
                 [disabled]="isUpdatingAnything"
-                (click)="addEmptyEncounterAtIndex(encounterIndex + 1)"
+                (click)="addEmptyEncounterAtIndex(encounterIndex)"
               ></app-button>
             </ng-container>
             <ng-container *ngIf="canUpdate">
