--- a/src/app/design/organisms/quote/quote.component.scss
+++ b/src/app/design/organisms/quote/quote.component.scss
@@ -8,6 +8,8 @@
   &__control{
     margin-left: var(--spacer-3);
     margin-right: var(--spacer-3);
+    display: inline-block;
+    width: fit-content;
   }
 }
 
