Enable card to expand as much as it wants

--- a/src/app/design/atoms/card/card.component.scss
+++ b/src/app/design/atoms/card/card.component.scss
@@ -12,4 +12,6 @@
   margin-bottom: var(--spacer-3);
   padding: var(--card-padding);
   flex-direction: var(--card-flex-direction);
+  width:100%;
+  height: 100%;
 }
