--- a/src/app/design/organisms/location/location.component.html
+++ b/src/app/design/organisms/location/location.component.html
@@ -7,16 +7,13 @@
   <app-html-text [text]="location.description"></app-html-text>
 </div>
 
+<app-separator></app-separator>
 <!-- List of Characters at this location -->
 <ng-container *ngIf="localCharacters.length > 0">
   <div class="card__connections">
     <app-badge-list
       [entries]="localCharacters"
-      [createOptions]="{
-        options: campaignCharacters,
-        labelProp: 'name',
-        valueProp: 'pk',
-      }"
+      [label]="'Local Characters'"
       [canCreate]="false"
       [canDelete]="false"
     ></app-badge-list>
