--- a/src/app/design/templates/organization/organization.component.scss
+++ b/src/app/design/templates/organization/organization.component.scss
@@ -10,7 +10,6 @@
   }
   
   &__subheading{
-    margin-bottom: var(--spacer-3);
     text-align: center;
   }
   
@@ -19,6 +18,7 @@
   }
   
   &__images{
+    margin-top: var(--spacer-3);
     margin-bottom: var(--spacer-3);
   }
   
