Add ability to set player time

--- a/src/app/design/organisms/player/player.component.html
+++ b/src/app/design/organisms/player/player.component.html
@@ -1,6 +1,6 @@
 <audio #audioPlayer
   (keydown)="triggerHotkeyAction($event)"
-  [src]="audioSource"
+  [src]="serverUrl + audioSource"
   [preload]="'metadata'"
   [controls]="false"
 ></audio>
