--- a/src/app/design/molecules/link-entry/link-entry.component.scss
+++ b/src/app/design/molecules/link-entry/link-entry.component.scss
@@ -19,6 +19,11 @@
   }
   
   &__delete{
+    display: flex;
+    justify-content: flex-end;
+  }
+  
+  &__delete-button{
     width: fit-content;
     display: inline-block;
   }
