Fix button and selector

--- a/src/app/design/organisms/spells/spells.component.html
+++ b/src/app/design/organisms/spells/spells.component.html
@@ -2,6 +2,7 @@
   <ng-container *ngIf="canCreate">
     <div class="row list__button">
       <app-button
+        class="list__button--button"
         [type]="'PRIMARY'"
         [text]="'Add Spell'"
         [icon]="'plus'"
