Fix spells component not having playerclass input and adjusted stories

--- a/src/app/design/organisms/spells/spells.component.html
+++ b/src/app/design/organisms/spells/spells.component.html
@@ -36,12 +36,12 @@
               </ng-container>
             </span>
           </div>
-        
           <app-spell
             body
             class="spell-card__spell"
             [spell]="card.spell"
             [serverModel]="serverModel"
+            [playerClasses]="playerClasses"
             [canUpdate]="canUpdate"
             [canDelete]="canDelete"
             [canCreate]="canCreate"
