--- a/src/app/design/molecules/icon-card/icon-card.component.html
+++ b/src/app/design/molecules/icon-card/icon-card.component.html
@@ -8,14 +8,14 @@
   <!-- Body -->
   <div class="card-body">
       <div class="card-title">
-          <strong> {{ title }} </strong>
+          <strong> {{ title | titlecase }} </strong>
       </div>
 
       <div class="card-subtitle"> 
           
           {{ updateDatetime | date }} 
           <div class="text-muted"> 
-              {{ subText }}
+              {{ subText | titlecase}}
           </div>
       </div>
   </div>
