--- a/src/app/design/organisms/icon-card-list/icon-card-list.component.html
+++ b/src/app/design/organisms/icon-card-list/icon-card-list.component.html
@@ -3,6 +3,7 @@
     <ng-container *ngFor="let article of articles">
       <div class="entry col-6 col-md-4 col-lg-3">
         <a
+          class="entry__link"
           [routerLink]="article.link" 
           [title]="article.entryType | titlecase"
         >
