--- a/src/app/design/organisms/icon-card-list/icon-card-list.component.scss
+++ b/src/app/design/organisms/icon-card-list/icon-card-list.component.scss
@@ -2,6 +2,11 @@
   padding-left: var(--spacer-2);
   padding-right: var(--spacer-2);
   margin-bottom: var(--spacer-4);
+  
+  &__link{
+    font-weight: unset;
+    text-decoration: unset;
+  }
 }
 
 .loading__spinner{
