--- a/src/app/design/molecules/icon-card/icon-card.component.scss
+++ b/src/app/design/molecules/icon-card/icon-card.component.scss
@@ -4,6 +4,10 @@
 }
 
 .card{
+  &:hover{
+    box-shadow: inset 0 0 30px var(--bs-link-hover-color);
+  }
+  
   &-icon-top{
     display: flex;
     align-items: center;
