Adjust namings to article-type

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -15,7 +15,7 @@
   --quest-color: var(--bs-white);
   --sessionaudio-color: var(--bs-green);
   --map-color: var(--bs-beige);
-  --rule-color: var(--bs-orange);
+  --rules-color: var(--bs-orange);
   --spell-color: var(--bs-purple);
   
   --highlight-gray: rgba(61, 70, 77, 0.85);
