--- a/src/app/design/organisms/search-hit/search-hit.component.scss
+++ b/src/app/design/organisms/search-hit/search-hit.component.scss
@@ -9,6 +9,8 @@
   padding-top: var(--spacer-2);
   padding-bottom: var(--spacer-2);
   border-left: solid 7px var(--search-border-color);
+  text-decoration: none;
+  font-weight: unset;
   
   &__heading{
     text-align: center;
@@ -22,6 +24,6 @@
   }
   
   &:hover{
-    background-color: transparent;
+    box-shadow: inset 0 0 30px var(--bs-link-hover-color);
   }
 }
