Add new custom behaviour to button styling
Button now does not grow on desktop,
but is allowed to grow on mobile

--- a/src/app/design/atoms/button/button.component.scss
+++ b/src/app/design/atoms/button/button.component.scss
@@ -1,5 +1,11 @@
+@import '/src/screens.scss';
+
 .btn{
   width: 100%;
+  
+  @include media-breakpoint-up(md){
+    width: fit-content;
+  }
   
   &__icon{
     margin-right: var(--spacer-1);
