--- a/src/app/design/atoms/button/button.component.scss
+++ b/src/app/design/atoms/button/button.component.scss
@@ -3,7 +3,7 @@
 .btn{
   width: 100%;
   
-  @include media-breakpoint-up(md){
+  @include media-breakpoint-up(sm){
     width: fit-content;
   }
   
