--- a/src/app/design/templates/diaryentry/diaryentry.component.scss
+++ b/src/app/design/templates/diaryentry/diaryentry.component.scss
@@ -39,8 +39,21 @@
   align-items: center;
   justify-content: space-between;
   
+  &__button-container{
+    display: flex;
+  }
+  
   &__button{
-    width: 100%
+    width: 100%;
+    display: flex;
+    
+    &--left{
+      justify-content: flex-start;
+    }
+    
+    &--right{
+      justify-content: flex-end;
+    }
   }
 }
 
