Add * to required custom fields

--- a/src/app/design/organisms/formly-datepicker-field/formly-datepicker-field.component.html
+++ b/src/app/design/organisms/formly-datepicker-field/formly-datepicker-field.component.html
@@ -2,7 +2,9 @@
   <label [for]="to['name']" class="form-label ">
       <strong>
           {{to.label}}
-          <ng-container *ngIf="to.required">*</ng-container>
+          <ng-container *ngIf="to.required">
+            *
+          </ng-container>
       </strong>
   </label>
 
