--- a/src/app/design/organisms/formly-editor-field/formly-editor-field.component.html
+++ b/src/app/design/organisms/formly-editor-field/formly-editor-field.component.html
@@ -4,6 +4,10 @@
     [for]="to['name']"
   >
     {{to.label}}
+    
+    <ng-container *ngIf="to.required">
+      *
+    </ng-container>
   </label>
   
   <editor 
