Make checkboxes more visible

--- a/src/global_class_modifications.scss
+++ b/src/global_class_modifications.scss
@@ -1,6 +1,11 @@
 // Modifies all Formly/Angular forms
-.form-label{
+.form-label,
+.form-check-label{
   font-weight: bold;
+}
+
+.form-check-input{
+  border-color: var(--bs-border-color);
 }
 
 
