--- a/src/app/design/templates/character-create-update/character-create-update.component.scss
+++ b/src/app/design/templates/character-create-update/character-create-update.component.scss
@@ -24,10 +24,18 @@
   }
   
   &__player-classes{
-    margin-bottom: var(--spacer-4);
+    margin-bottom: var(--spacer-5);
   }
   
   &__memberships{
-    margin-bottom: var(--spacer-4);
+    margin-bottom: var(--spacer-5);
+  }
+  
+  &__heading-separator{
+    --separator-margin-top: var(--spacer-0);
+  }
+  
+  &__heading{
+    margin-bottom: var(--spacer-0);
   }
 }
