Fix image grid not taking up all the height it can when available

--- a/src/app/design/organisms/image-grid/image-grid.component.html
+++ b/src/app/design/organisms/image-grid/image-grid.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mb-5">
+<div class="container-fluid">
   <ng-container *ngIf="entries != null; else loading">
     <ng-container *ngIf="entries.length > 0; else noEntries">
         <div class="row image-grid">
