Enable customizing toggle button size

--- a/src/app/design/molecules/confirmation-toggle-button/confirmation-toggle-button.component.html
+++ b/src/app/design/molecules/confirmation-toggle-button/confirmation-toggle-button.component.html
@@ -8,6 +8,7 @@
     (click)="toggle()" 
     [type]="toggleType"
     [icon]="icon"
+    [size]="toggleSize"
     [text]="text"
     [outline]="true"
   ></app-button>
