Move end to flex-end for better browser support

--- a/src/app/design/templates/map/map.component.scss
+++ b/src/app/design/templates/map/map.component.scss
@@ -2,7 +2,7 @@
   &__edit-container{
     width: 100%;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
   }
   
   &__no-map{
