--- a/src/app/design/templates/profile/profile.component.scss
+++ b/src/app/design/templates/profile/profile.component.scss
@@ -23,7 +23,7 @@
     position: relative;
     display: flex;
     align-self: flex-end;
-    justify-content: end;
+    justify-content: flex-end;
     top: 1px;
   }
   
