--- a/src/app/design/templates/campaign-admin/campaign-admin.component.scss
+++ b/src/app/design/templates/campaign-admin/campaign-admin.component.scss
@@ -4,7 +4,7 @@
   &__edit-container{
     width: 100%;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
   }
   
   &__user-group{
