Add home page to campaign module

--- a/src/app/design/templates/home/home.component.html
+++ b/src/app/design/templates/home/home.component.html
@@ -2,17 +2,17 @@
   <!-- Heading -->
   <header class="home__heading-container heading-container">
     <img class="heading-container__icon"
-      [src]="serverUrl + campaignData.icon" 
+      [src]="serverUrl + campaignData?.icon" 
       [alt]="DEFAULT_ICON"
     />
     
     <h1 class="heading-container__heading"> 
-      {{campaignData.name}} 
+      {{campaignData?.name}} 
     </h1>
     
     <app-html-text
       class="heading-container__subheading" 
-      [text]="campaignData.subtitle"
+      [text]="campaignData?.subtitle ?? ''"
     ></app-html-text>
   </header>
   
