--- a/src/app/design/templates/campaign-overview/campaign-overview.component.scss
+++ b/src/app/design/templates/campaign-overview/campaign-overview.component.scss
@@ -1,3 +1,5 @@
+@import '/src/screens.scss';
+
 .container{
   width: 100vw;
   min-height: 100vh; //Ensures the campaigns take up at least the whole screen, maybe more
@@ -6,6 +8,9 @@
   display: flex;
   flex-direction: column;
   background-color: var(--bs-black);
+  position: absolute;
+  top: 0px;
+  left: 0px;
 }
 
 .campaign{
@@ -25,8 +30,15 @@
   }
   
   &__button{
-    margin-left: var(--spacer-2);
-    margin-right: var(--spacer-2);
+    margin-top: var(--spacer-1);
+    margin-bottom: var(--spacer-1);
+    display: inline-block;
+    width: 100%;
+    
+    @include media-breakpoint-up(sm){
+      width: unset;
+      margin: var(--spacer-2);
+    }
   }
   
   &__text{
