--- a/src/app/design/organisms/page/page.component.scss
+++ b/src/app/design/organisms/page/page.component.scss
@@ -46,7 +46,7 @@
   }
   
   &__content{
-    padding: var(--spacer-0) var(--spacer-2);
+    padding: var(--spacer-0);
     width: 100%;
     height: 100%;
   }
